Bugfix/aareg gjenopprett duplicates (#2338)
* Fikset aareg merge issue som førte til at arbeidsforhold ble lagt til flere ganger ved gjenopprett. Også laget noen tester for denne og prøvd å gjøre den litt mindre kompleks.
* Lagt til Deserializing for Aktoer type
* Fiks kommentar